index.d.ts added for types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "incremental": true,
     "strict": true,
     "strictNullChecks": false,
+    "declaration": true,
     "typeRoots": ["node_modules/@types", "src/@types"],
     "skipLibCheck": true
   },
