--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "itunes-web-api",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "description": "iTunes Web API Scrapper. Get iTunes track/trackvideo/artist/album/movie/app/book/voicebook/podcast infos with their names.",
   "main": "dist",
   "keywords": [
@@ -13,8 +13,6 @@
   ],
   "scripts": {
     "format": "prettier --write .",
-    "start": "node dist/index.js",
-    "dev": "nodemon index.ts",
     "build": "tsc",
     "preinstall": "tsc"
   },
@@ -26,7 +24,9 @@
     "url": "git+https://github.com/BilalTaner/itunes-web-api.git"
   },
   "dependencies": {
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "prettier": "^2.3.2",
+    "typescript": "^4.4.2"
   },
   "devDependencies": {
     "@types/node-fetch": "^2.5.12"
