--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "itunes-web-api",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "description": "iTunes Web API Scrapper. Get iTunes track/trackvideo/artist/album/movie/app/book/voicebook/podcast infos with their names.",
   "main": "dist",
   "keywords": [
@@ -12,7 +12,6 @@
     "itunes-web"
   ],
   "scripts": {
-    "format": "prettier --write .",
     "build": "tsc",
     "preinstall": "tsc"
   },
@@ -24,11 +23,8 @@
     "url": "git+https://github.com/BilalTaner/itunes-web-api.git"
   },
   "dependencies": {
+    "@types/node-fetch": "^2.5.12",
     "node-fetch": "^2.6.1",
-    "prettier": "^2.3.2",
     "typescript": "^4.4.2"
-  },
-  "devDependencies": {
-    "@types/node-fetch": "^2.5.12"
   }
 }
