--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "itunes-web-api",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "description": "iTunes Web API Scrapper. Get iTunes track/trackvideo/artist/album/movie/app/book/voicebook/podcast infos with their names.",
-  "main": "dist",
+  "main": "dist/index.js",
   "keywords": [
     "itunes",
     "itunes-api",
@@ -11,10 +11,6 @@
     "apple-api",
     "itunes-web"
   ],
-  "scripts": {
-    "build": "tsc",
-    "preinstall": "tsc"
-  },
   "author": "shynox",
   "license": "MIT",
   "types": "dist/index.d.ts",
@@ -23,8 +19,10 @@
     "url": "git+https://github.com/BilalTaner/itunes-web-api.git"
   },
   "dependencies": {
+    "node-fetch": "^3.0.0"
+  },
+  "devDependencies": {
     "@types/node-fetch": "^2.5.12",
-    "node-fetch": "^2.6.1",
     "typescript": "^4.4.2"
   }
 }
