--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "itunes-web-api",
-  "version": "2.0.7",
+  "version": "2.1.0",
   "description": "iTunes Web API Scrapper. Get iTunes track/trackvideo/artist/album/movie/app/book/voicebook/podcast infos with their names.",
   "main": "dist/index.js",
   "keywords": [
@@ -14,6 +14,10 @@
   "author": "shynox",
   "license": "MIT",
   "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsc",
+    "prepare": "tsc"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BilalTaner/itunes-web-api.git"
